--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,10 @@
 html,
 body {
-  padding: 0;
+ color:#414141;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: #e4f1f1;
 }
 
 a {
@@ -11,6 +12,26 @@ a {
   text-decoration: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+    color: #2b2b2b;
+}
+
+
+
 * {
   box-sizing: border-box;
+}
+ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.center{
+    margin: auto;
+    text-align: center;
 }
